AUTOMAKE_OPTIONS = foreign

SUBDIRS = api\
audio\
base\
call\
common_audio\
common_video\
logging\
media\
modules/audio_coding/acm2\
modules/audio_coding/audio_network_adaptor\
modules/audio_coding/codecs\
modules/audio_coding/codecs/cng\
modules/audio_coding/codecs/g711\
modules/audio_coding/codecs/g722\
modules/audio_coding/codecs/ilbc\
modules/audio_coding/codecs/isac/main\
modules/audio_coding/codecs/isac/fix\
modules/audio_coding/codecs/isac\
modules/audio_coding/codecs/opus\
modules/audio_coding/codecs/pcm16b\
modules/audio_coding/neteq\
modules/audio_conference_mixer\
modules/audio_device\
modules/audio_mixer\
modules/audio_processing\
modules/bitrate_controller\
modules/congestion_controller\
modules/media_file\
modules/pacing\
modules/remote_bitrate_estimator\
modules/rtp_rtcp\
modules/utility\
modules/video_capture\
modules/video_coding\
modules/video_coding/codecs/h264\
modules/video_coding/codecs/i420\
modules/video_coding/codecs/vp8\
modules/video_coding/codecs/vp9\
modules/video_processing\
system_wrappers\
video\
voice_engine\
p2p\
pc
