AUTOMAKE_OPTIONS = foreign

lib_LIBRARIES = libwebrtc_audio_network_adaptor.a

DEFS = -I../../../../

AM_CPPFLAGS = -DWEBRTC_POSIX -DWEBRTC_LINUX
AM_CXXFLAGS = -std=gnu++11

libwebrtc_audio_network_adaptor_a_SOURCES = audio_network_adaptor.cc\
audio_network_adaptor_impl.cc\
bitrate_controller.cc\
channel_controller.cc\
controller.cc\
controller_manager.cc\
debug_dump_writer.cc\
dtx_controller.cc\
fec_controller.cc\
frame_length_controller.cc   